spectrocloud-addons/gloo-mesh-enterprise/charts/gloo-mesh-enterprise/files/local-envoy.yaml
# Required comment so SKv2-rendered config map works properly. First line is extra indented, so need to be a comment.
# This envoy.yaml should only be run as part of the `make run-local-envoy` make target. This removes the dashboard authentication
# settings changes.
static_resources:
  listeners:
    - name: listener_0
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 8090
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                codec_type: AUTO
                stat_prefix: ingress_http
                route_config:
                  name: gloo-mesh
                  virtual_hosts:
                    - name: gloo-mesh
                      domains: ["*"]
                      routes:
                        # gRPC requests go to the API
                        - match:
                            prefix: "/"
                            headers:
                              - name: content-type
                                prefix_match: application/grpc
                          route:
                            cluster: gloo-mesh-apiserver
                            timeout: 60s
                        - match:
                            prefix: "/"
                          route:
                            cluster: gloo-mesh-ui
                            timeout: 15s
                      cors:
                        allow_origin_string_match:
                          - safe_regex:
                              google_re2: {}
                              regex: \*
                        allow_methods: GET, PUT, DELETE, POST, OPTIONS
                        allow_headers: keep-alive,user-agent,cache-control,content-type,content-transfer-encoding,x-accept-content-transfer-encoding,x-accept-response-streaming,x-user-agent,x-grpc-web
                        max_age: "1728000"
                        expose_headers: grpc-status,grpc-message
                        filter_enabled: # the values 100/HUNDRED are the default. Still, we want to explicitly define them until we know that the envoy we are using conforms to the new api
                          default_value:
                            numerator: 100
                            denominator: HUNDRED
                http_filters:
                  - name: envoy.filters.http.grpc_web
                  - name: envoy.filters.http.cors
                  - name: envoy.filters.http.router
  clusters:
    - name: gloo-mesh-apiserver
      connect_timeout: 15.000s
      type: STATIC
      http2_protocol_options:
        connection_keepalive:
          interval: 30s
          timeout: 5s
      lb_policy: round_robin
      load_assignment:
        cluster_name: gloo-mesh-apiserver
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: 127.0.0.1
                      port_value: 10101
    - name: gloo-mesh-ui
      connect_timeout: 15.000s
      type: static
      lb_policy: round_robin
      load_assignment:
        cluster_name: gloo-mesh-ui
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: 127.0.0.1
                      port_value: 20202
    - name: admin_port_cluster
      connect_timeout: 15.000s
      type: STATIC
      lb_policy: ROUND_ROBIN
      load_assignment:
        cluster_name: admin_port_cluster
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: 127.0.0.1
                      port_value: 19000
admin:
  access_log_path: /dev/null
  address:
    socket_address:
      address: 127.0.0.1
      port_value: 19000
